@@ -474,6 +474,7 @@ Other memory:
 
 0.2.4 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* Verfied c5471 build under Cygwin on WinXP
 	* Started m68322
 </pre></ul>
 
